--- a/macros.cfg
+++ b/macros.cfg
@@ -35,21 +35,24 @@ gcode:
     G92 E0
     G1 Y10 E10 F1200 ; prime the nozzle
     G92 E0
+    M117 Printing
 
 [gcode_macro END_PRINT]
 gcode:
     # Turn off bed, extruder, and fan
+    M117 Heaters Off
     M140 S0
     M104 S0
     M106 S0
     # Move nozzle away from print while retracting
     G91
     G1 X-2 Y-2 E-3 F300
-    # Raise nozzle by 10mm
-    G1 Z10 F3000
+    # Raise nozzle by 40mm
+    G1 Z40 F3000
     G90
     # Disable steppers
     M84
+    M117 Printing Complete
 
 [gcode_macro M600]
 description: Starts process of Filament Change
@@ -87,7 +90,6 @@ gcode:
     {% set Z = params.Z|default(50)|int %}
     {% set axis_max = printer.toolhead.axis_maximum %}
     {% set pos = printer.toolhead.position %}
-
     {% set z_diff = axis_max.z - pos.z %}
     {% set z_safe_lift = [ Z, z_diff ] | min%}
     
@@ -161,6 +163,7 @@ description: Preheats extruder and bed for PLA printing, extruder set to 150 to 
 gcode:
   {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(150)|float %}
   {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
+  M117 Preheating PLA
   SET_HEATER_TEMPERATURE HEATER=extruder TARGET={EXTRUDER_TEMP}
   SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={BED_TEMP}
 
@@ -184,8 +187,10 @@ gcode:
   {% set BED_TEMP = params.BED_TEMP|default(60)|float %} 
   SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={BED_TEMP}
   HOME_CHECK
+  M117 Heating Bed
   M190 S{BED_TEMP}
   BED_MESH_CLEAR
+  M117 Calibrating
   BED_MESH_CALIBRATE
   TURN_OFF_HEATERS
   SAVE_CONFIG
@@ -223,13 +228,14 @@ gcode:
 description: Checks if the printer is homed, it not it homes the printer
 gcode:
   {% if printer.toolhead.homed_axes != "xyz" %}
+  M117 Homing Printer
   G28
   {% endif %}
 
 [gcode_macro SHOW_PRINT]
 description: Moves the extruder out of the way and bed forward
 gcode:
-    HOME_CHECK
+    # HOME_CHECK
     {% set Z = params.Z|default(50)|int %}
     {% set axis_max = printer.toolhead.axis_maximum %}
     {% set pos = printer.toolhead.position %}
@@ -251,26 +257,6 @@ gcode:
   PROBE_CALIBRATE
   {% endif %}
 
-[gcode_macro Z_Down_01]
-description: Moves Z down by 0.1
-gcode:
-  TESTZ Z=-.1
-
-[gcode_macro Z_Up_01]
-description: Moves Z up by 0.1
-gcode:
-  TESTZ Z=+.1
-
-[gcode_macro Z_Low_Half]
-description: Sets Z between current value and previous lower value
-gcode:
-  TESTZ Z=-
-
-[gcode_macro Z_High_Half]
-description: Sets Z between current value and previous higher value
-gcode:
-  TESTZ Z=+
-
 [gcode_macro Accept_Save]
 description: Accepts the Z-Offset and saves the config
 gcode:
@@ -284,11 +270,11 @@ gcode:
 
 [screws_tilt_adjust]
 horizontal_move_z: 5
-screw1: 50,220
-screw1_name: Back left
-screw2: 228,220
-screw2_name: Back Right
-screw3: 50,74
-screw3_name: Front Left
-screw4: 228,74
-screw4_name: Front Right
+screw1: 70,213
+screw1_name: back left
+screw2: 235,213
+screw2_name: back right
+screw3: 70,47
+screw3_name: front left
+screw4: 235,47
+screw4_name: front right
