--- a/macros.cfg
+++ b/macros.cfg
@@ -120,8 +120,9 @@ gcode:
 description: Loads filament into the extruder
 gcode:
   {% if printer.extruder.temperature < 180 %}
-    {action_respond_info("Extruder temperature too low")}
-  {% else %}
+    {action_respond_info("Extruder temperature too low, heating extruder")}
+    HEAT
+  {% endif %}
     SAVE_GCODE_STATE NAME=LOAD_state
     G91                   # Relative coords
     G1 E50 F{ 5 * 60 }  # extrude
@@ -129,7 +130,6 @@ gcode:
     G1 E25.0 F{ 5 * 60 }  # extrude a little more
     _ENABLE_FS
     RESTORE_GCODE_STATE NAME=LOAD_state
-  {% endif %}
 
 [gcode_macro _DISABLE_FS]
 description: placeholder, disables filament sensor that might trigger an M600 in the middle of a load/unload/M600...
@@ -167,7 +167,7 @@ gcode:
   SET_HEATER_TEMPERATURE HEATER=extruder TARGET={EXTRUDER_TEMP}
   SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={BED_TEMP}
 
-[gcode_macro BED_TRAMMING_1]
+[gcode_macro BED_SCREWS_ADJ]
 description: Heats bed and starts process to level the bed with the screws
 gcode:
   {% set BED_TEMP = params.BED_TEMP|default(60)|float %} 
@@ -176,7 +176,7 @@ gcode:
   M190 S{BED_TEMP}
   SCREWS_TILT_CALCULATE
 
-[gcode_macro BED_TRAMMING_2]
+[gcode_macro BED_SCREWS_ADJ_CONT]
 description: Continues the bed screw leveling process
 gcode:
   SCREWS_TILT_CALCULATE
