--- a/printer.cfg
+++ b/printer.cfg
@@ -15,7 +15,7 @@
 # that was flashed.
 
 # See docs/Config_Reference.md for a description of parameters.
-[include fluidd.cfg]
+[include mainsail.cfg]
 [include macros.cfg]
 [stepper_x]
 step_pin: PC2
@@ -127,11 +127,11 @@ fade_target: 0
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.040000, -0.010000, -0.067500, 0.010000, 0.072500
-#*# 	  0.212500, 0.125000, -0.005000, 0.005000, -0.077500
-#*# 	  0.100000, 0.037500, -0.052500, -0.020000, -0.057500
-#*# 	  0.125000, 0.082500, 0.002500, 0.027500, 0.005000
-#*# 	  0.060000, 0.035000, -0.055000, 0.010000, 0.017500
+#*# 	  0.105000, 0.020000, -0.025000, -0.077500, -0.132500
+#*# 	  0.110000, 0.042500, -0.030000, -0.042500, -0.122500
+#*# 	  -0.005000, -0.012500, -0.040000, -0.017500, -0.030000
+#*# 	  -0.007500, 0.000000, -0.030000, -0.030000, -0.050000
+#*# 	  -0.085000, -0.025000, -0.015000, 0.030000, 0.030000
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
@@ -144,7 +144,7 @@ fade_target: 0
 #*# max_y = 191.0
 #*#
 #*# [bltouch]
-#*# z_offset = 1.405
+#*# z_offset = 1.370
 #*#
 #*# [extruder]
 #*# control = pid
